moved js declaration to end of body section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
         <link rel="stylesheet" href="assets/fonts/stylesheet.css" type="text/css" />
         
-        <!-- javascript -->
-        <script src="assets/javascript/game.js"></script>
-
         <title>Greatest Word Guess Game</title>
     </head>
     <body>
@@ -50,6 +47,10 @@
             </div>
         </div>
         
+        <!-- javascript -->
+        <script src="assets/javascript/utility.js"></script>
+        <script src="assets/javascript/dictionary.js"></script>
+        <script src="assets/javascript/game.js"></script>
 
     </body>
 </html>
