--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
         <link rel="stylesheet" href="assets/fonts/stylesheet.css" type="text/css" />
         
-        <title>Greatest Word Guess Game</title>
+        <title>Football Word Guess Game</title>
     </head>
     <body>
 
